# ocaml-portaudio

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  COPYING  Makefile.in  README  README.md  bootstrap  configure.ac  dune-project  portaudio.opam
examples/: Makefile  OCamlMakefile  dune  noise.ml
src/: META.in  Makefile.in  OCamlMakefile  portaudio.ml  portaudio.mli  portaudio_stubs.c
src/config/: discover.ml
