opam-version: "2.0"
name: "portaudio"
version: "0.2.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-portaudio"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["portaudio-dev"] {os-distribution = "alpine"}
  ["portaudio"] {os = "macos" & os-distribution = "homebrew"}
  ["portaudio19-dev"] {os-distribution = "debian"}
  ["portaudio19-dev"] {os-distribution = "ubuntu"}
]
bug-reports: "https://github.com/savonet/ocaml-portaudio/issues"
dev-repo: "git+https://github.com/savonet/ocaml-portaudio.git"
synopsis:
  "Bindings for the portaudio library which provides high-level functions for using soundcards"
